--- a/index.html
+++ b/index.html
@@ -5,21 +5,601 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>RouxYou — Sovereign AI on Consumer Hardware</title>
 <meta name="description" content="A self-evolving, fully local, multi-agent AI system. Zero cloud dependencies. Your hardware. Your data. Your rules.">
+<meta name="author" content="Dr. Helix">
+<meta property="og:title" content="RouxYou — Sovereign AI on Consumer Hardware">
+<meta property="og:description" content="Self-evolving multi-agent AI. Fully local. Zero cloud. Your hardware. Your rules.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://rouxyou.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=JetBrains+Mono:wght@300;400;500&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{background:#0a0c0b;color:#d4d0c8;font-family:Georgia,'Times New Roman',serif;min-height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;padding:2rem}
-.wrap{max-width:640px}
-h1{font-size:clamp(2.5rem,6vw,4rem);font-weight:400;letter-spacing:0.02em;margin-bottom:0.5em;color:#c89b3c}
-p{font-size:1.1rem;line-height:1.7;color:#8a8678;margin-bottom:1.5em}
-.tag{font-family:monospace;font-size:0.75rem;color:#4a7c5e;text-transform:uppercase;letter-spacing:0.15em;margin-bottom:2rem;display:block}
+:root {
+  --swamp-black: #080b09;
+  --swamp-deep: #0c110e;
+  --swamp-dark: #121a15;
+  --moss: #2a4a32;
+  --moss-light: #3d6b48;
+  --bayou-blue: #1a2f3a;
+  --water-blue: #2a4858;
+  --mud: #3d2e1f;
+  --mud-light: #6b5438;
+  --cypress: #8b7a56;
+  --gold: #c89b3c;
+  --gold-dim: #a07d2e;
+  --fog: #9a9484;
+  --bone: #d4d0c8;
+  --root: #5c7a4a;
+}
+
+* { margin: 0; padding: 0; box-sizing: border-box; }
+
+body {
+  background: var(--swamp-black);
+  color: var(--bone);
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 300;
+  line-height: 1.7;
+  overflow-x: hidden;
+}
+
+/* Swamp texture overlay */
+body::before {
+  content: '';
+  position: fixed;
+  inset: 0;
+  background: 
+    radial-gradient(ellipse at 20% 50%, rgba(42, 74, 50, 0.08) 0%, transparent 60%),
+    radial-gradient(ellipse at 80% 20%, rgba(26, 47, 58, 0.06) 0%, transparent 50%),
+    radial-gradient(ellipse at 50% 80%, rgba(61, 46, 31, 0.05) 0%, transparent 40%);
+  pointer-events: none;
+  z-index: 0;
+}
+
+/* Grain texture */
+body::after {
+  content: '';
+  position: fixed;
+  inset: 0;
+  opacity: 0.03;
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)'/%3E%3C/svg%3E");
+  pointer-events: none;
+  z-index: 1;
+}
+
+.page { position: relative; z-index: 2; }
+
+/* === HEADER === */
+header {
+  padding: 2rem 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgba(42, 74, 50, 0.15);
+}
+
+.wordmark {
+  font-family: 'Instrument Serif', serif;
+  font-size: 1.4rem;
+  color: var(--gold);
+  letter-spacing: 0.04em;
+  text-decoration: none;
+}
+
+.header-tag {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.65rem;
+  font-weight: 300;
+  color: var(--moss-light);
+  letter-spacing: 0.12em;
+  text-transform: uppercase;
+}
+
+/* === HERO === */
+.hero {
+  padding: 8rem 3rem 6rem;
+  max-width: 900px;
+  position: relative;
+}
+
+.hero::before {
+  content: '';
+  position: absolute;
+  left: 3rem;
+  top: 4rem;
+  width: 1px;
+  height: calc(100% - 4rem);
+  background: linear-gradient(to bottom, var(--moss), transparent);
+  opacity: 0.3;
+}
+
+.hero-label {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.7rem;
+  font-weight: 400;
+  color: var(--root);
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+  padding-left: 2rem;
+}
+
+h1 {
+  font-family: 'Instrument Serif', serif;
+  font-size: clamp(3rem, 7vw, 5.5rem);
+  font-weight: 400;
+  line-height: 1.05;
+  color: var(--bone);
+  margin-bottom: 0.3em;
+  padding-left: 2rem;
+}
+
+h1 em {
+  font-style: italic;
+  color: var(--gold);
+}
+
+.hero-sub {
+  font-size: 1.15rem;
+  color: var(--fog);
+  max-width: 580px;
+  padding-left: 2rem;
+  margin-bottom: 3rem;
+}
+
+.hero-rules {
+  display: flex;
+  gap: 2.5rem;
+  padding-left: 2rem;
+  margin-top: 3rem;
+}
+
+.rule {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+
+.rule-value {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.75rem;
+  font-weight: 500;
+  color: var(--gold);
+  letter-spacing: 0.05em;
+}
+
+.rule-label {
+  font-size: 0.7rem;
+  color: var(--fog);
+  opacity: 0.6;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+
+/* === DIVIDER === */
+.divider {
+  height: 1px;
+  background: linear-gradient(to right, var(--moss), var(--bayou-blue), transparent);
+  margin: 0 3rem;
+  opacity: 0.25;
+}
+
+/* === WHAT IT IS === */
+.what {
+  padding: 5rem 3rem;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  gap: 3rem;
+  max-width: 1100px;
+}
+
+.section-label {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.65rem;
+  font-weight: 400;
+  color: var(--moss-light);
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  padding-top: 0.4rem;
+}
+
+.what-content h2 {
+  font-family: 'Instrument Serif', serif;
+  font-size: 2rem;
+  font-weight: 400;
+  color: var(--bone);
+  margin-bottom: 1.5rem;
+}
+
+.what-content p {
+  color: var(--fog);
+  font-size: 0.95rem;
+  margin-bottom: 1.2rem;
+  max-width: 600px;
+}
+
+/* === ARCHITECTURE === */
+.arch {
+  padding: 5rem 3rem;
+  max-width: 1100px;
+}
+
+.arch-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 1px;
+  margin-top: 2.5rem;
+  background: rgba(42, 74, 50, 0.1);
+  border: 1px solid rgba(42, 74, 50, 0.12);
+}
+
+.arch-cell {
+  background: var(--swamp-deep);
+  padding: 2rem 1.8rem;
+  transition: background 0.3s ease;
+}
+
+.arch-cell:hover {
+  background: rgba(42, 74, 50, 0.08);
+}
+
+.arch-port {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.65rem;
+  font-weight: 300;
+  color: var(--water-blue);
+  letter-spacing: 0.05em;
+  margin-bottom: 0.8rem;
+  opacity: 0.7;
+}
+
+.arch-name {
+  font-family: 'Instrument Serif', serif;
+  font-size: 1.3rem;
+  color: var(--bone);
+  margin-bottom: 0.6rem;
+}
+
+.arch-desc {
+  font-size: 0.78rem;
+  color: var(--fog);
+  opacity: 0.7;
+  line-height: 1.6;
+}
+
+/* === CLAIMS === */
+.claims {
+  padding: 5rem 3rem;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  gap: 3rem;
+  max-width: 1100px;
+}
+
+.claims-list {
+  display: grid;
+  gap: 0;
+}
+
+.claim {
+  padding: 1.5rem 0;
+  border-bottom: 1px solid rgba(42, 74, 50, 0.1);
+  display: grid;
+  grid-template-columns: 2rem 1fr;
+  gap: 1rem;
+  align-items: start;
+}
+
+.claim-num {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.65rem;
+  color: var(--gold-dim);
+  padding-top: 0.2rem;
+}
+
+.claim-text {
+  font-size: 0.9rem;
+  color: var(--fog);
+  line-height: 1.6;
+}
+
+.claim-text strong {
+  color: var(--bone);
+  font-weight: 400;
+}
+
+/* === SELF-MOD === */
+.selfmod {
+  padding: 5rem 3rem;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  gap: 3rem;
+  max-width: 1100px;
+}
+
+.pipeline {
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  margin-top: 1rem;
+}
+
+.pipe-step {
+  display: grid;
+  grid-template-columns: 120px 1fr;
+  gap: 1.5rem;
+  padding: 1.2rem 0;
+  border-left: 1px solid rgba(42, 74, 50, 0.2);
+  padding-left: 1.5rem;
+  position: relative;
+}
+
+.pipe-step::before {
+  content: '';
+  position: absolute;
+  left: -3px;
+  top: 1.6rem;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background: var(--moss-light);
+}
+
+.pipe-phase {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.65rem;
+  font-weight: 400;
+  color: var(--gold-dim);
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  padding-top: 0.15rem;
+}
+
+.pipe-desc {
+  font-size: 0.85rem;
+  color: var(--fog);
+  line-height: 1.6;
+}
+
+/* === ETHOS === */
+.ethos {
+  padding: 6rem 3rem;
+  max-width: 750px;
+}
+
+.ethos blockquote {
+  font-family: 'Instrument Serif', serif;
+  font-size: 1.6rem;
+  font-style: italic;
+  color: var(--bone);
+  line-height: 1.5;
+  border-left: 2px solid var(--gold-dim);
+  padding-left: 2rem;
+  margin-bottom: 1.5rem;
+  opacity: 0.9;
+}
+
+.ethos .attr {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.65rem;
+  color: var(--fog);
+  opacity: 0.5;
+  letter-spacing: 0.1em;
+  padding-left: 2rem;
+}
+
+/* === FOOTER === */
+footer {
+  padding: 3rem;
+  border-top: 1px solid rgba(42, 74, 50, 0.12);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-left {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.6rem;
+  color: var(--fog);
+  opacity: 0.35;
+  letter-spacing: 0.08em;
+}
+
+.footer-right {
+  display: flex;
+  gap: 2rem;
+}
+
+.footer-right a {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.65rem;
+  color: var(--moss-light);
+  text-decoration: none;
+  letter-spacing: 0.08em;
+  transition: color 0.2s;
+}
+
+.footer-right a:hover {
+  color: var(--gold);
+}
+
+/* === ANIMATIONS === */
+@keyframes fadeUp {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+.hero-label, h1, .hero-sub, .hero-rules {
+  animation: fadeUp 0.8s ease both;
+}
+.hero-label { animation-delay: 0.1s; }
+h1 { animation-delay: 0.25s; }
+.hero-sub { animation-delay: 0.4s; }
+.hero-rules { animation-delay: 0.55s; }
+
+/* === RESPONSIVE === */
+@media (max-width: 768px) {
+  header { padding: 1.5rem; }
+  .hero { padding: 5rem 1.5rem 4rem; }
+  .hero::before { left: 1.5rem; top: 3rem; }
+  .hero-rules { flex-direction: column; gap: 1.2rem; }
+  .what, .claims, .selfmod { 
+    grid-template-columns: 1fr; 
+    padding: 3rem 1.5rem;
+    gap: 1.5rem;
+  }
+  .arch { padding: 3rem 1.5rem; }
+  .arch-grid { grid-template-columns: 1fr; }
+  .ethos { padding: 4rem 1.5rem; }
+  .ethos blockquote { font-size: 1.3rem; }
+  footer { padding: 2rem 1.5rem; flex-direction: column; gap: 1rem; }
+  .divider { margin: 0 1.5rem; }
+}
 </style>
 </head>
 <body>
-<div class="wrap">
-<span class="tag">Est. February 20, 2026</span>
-<h1>RouxYou</h1>
-<p>A self-evolving, sovereign AI agent system running entirely on consumer hardware. No cloud. No API keys. No data leaves your network.</p>
-<p>Architecture documentation incoming.</p>
+<div class="page">
+
+<header>
+  <a href="/" class="wordmark">RouxYou</a>
+  <span class="header-tag">Est. February 2026</span>
+</header>
+
+<section class="hero">
+  <div class="hero-label">Sovereign AI Infrastructure</div>
+  <h1>Your AI should<br>answer to <em>you</em></h1>
+  <p class="hero-sub">RouxYou is a self-evolving, multi-agent AI system running entirely on consumer hardware. No cloud. No API keys. No data leaves your network.</p>
+  <div class="hero-rules">
+    <div class="rule">
+      <span class="rule-value">Zero</span>
+      <span class="rule-label">Cloud Dependencies</span>
+    </div>
+    <div class="rule">
+      <span class="rule-value">Local</span>
+      <span class="rule-label">LLM Inference</span>
+    </div>
+    <div class="rule">
+      <span class="rule-value">Self-Mod</span>
+      <span class="rule-label">With Rollback</span>
+    </div>
+    <div class="rule">
+      <span class="rule-value">Episodic</span>
+      <span class="rule-label">Memory System</span>
+    </div>
+  </div>
+</section>
+
+<div class="divider"></div>
+
+<section class="what">
+  <div class="section-label">What It Is</div>
+  <div class="what-content">
+    <h2>The orchestration layer is too important to rent</h2>
+    <p>Every major AI agent framework sends your data to someone else's server. Your prompts, your files, your workflow — routed through third-party APIs, metered by the token, owned by the provider.</p>
+    <p>RouxYou runs the entire stack locally. A lightweight router classifies intent. A planner reasons through complex tasks. Workers execute without LLM overhead. A watchdog monitors the whole thing — and can't be modified by the system it watches.</p>
+    <p>The system learns from its own task history, improves its own code through a blue-green deployment pipeline, and rolls back automatically when something breaks. No fine-tuning. No retraining. Just episodic memory and safe self-modification.</p>
+  </div>
+</section>
+
+<div class="divider"></div>
+
+<section class="arch">
+  <div class="section-label">Architecture</div>
+  <div class="arch-grid">
+    <div class="arch-cell">
+      <div class="arch-port">:8000</div>
+      <div class="arch-name">Gateway</div>
+      <div class="arch-desc">Reverse proxy and route table. Hot-swaps between production and staging during deploys.</div>
+    </div>
+    <div class="arch-cell">
+      <div class="arch-port">:8001 — Ministral-3B</div>
+      <div class="arch-name">Orchestrator</div>
+      <div class="arch-desc">Three-tier routing. Pattern match → direct dispatch → deep planning. Minimizes LLM calls.</div>
+    </div>
+    <div class="arch-cell">
+      <div class="arch-port">:8002 — Qwen3-14B</div>
+      <div class="arch-name">Thinker</div>
+      <div class="arch-desc">Deep reasoning and code generation. Only invoked when the task demands it.</div>
+    </div>
+    <div class="arch-cell">
+      <div class="arch-port">:8003</div>
+      <div class="arch-name">Worker</div>
+      <div class="arch-desc">15+ capabilities. Zero LLM overhead. Pure Python execution for filesystem, search, scheduling.</div>
+    </div>
+    <div class="arch-cell">
+      <div class="arch-port">:8010 — immutable</div>
+      <div class="arch-name">Watchtower</div>
+      <div class="arch-desc">Supervisor with human approval gate. Cannot be modified by the system. The one thing that doesn't evolve.</div>
+    </div>
+  </div>
+</section>
+
+<div class="divider"></div>
+
+<section class="claims">
+  <div class="section-label">First To Combine</div>
+  <div class="claims-list">
+    <div class="claim">
+      <span class="claim-num">01</span>
+      <div class="claim-text"><strong>Fully local inference</strong> on consumer-grade hardware — no cloud APIs, no per-token costs, no data exfiltration</div>
+    </div>
+    <div class="claim">
+      <span class="claim-num">02</span>
+      <div class="claim-text"><strong>Multi-agent orchestration</strong> with tiered routing that minimizes LLM calls through pattern matching and direct dispatch</div>
+    </div>
+    <div class="claim">
+      <span class="claim-num">03</span>
+      <div class="claim-text"><strong>Self-modification</strong> through blue-green deployment with anchor validation, health checks, and automatic rollback</div>
+    </div>
+    <div class="claim">
+      <span class="claim-num">04</span>
+      <div class="claim-text"><strong>Episodic memory</strong> that teaches the system from its own task history — learning without fine-tuning</div>
+    </div>
+  </div>
+</section>
+
+<div class="divider"></div>
+
+<section class="selfmod">
+  <div class="section-label">Self-Modification</div>
+  <div class="pipeline">
+    <div class="pipe-step">
+      <span class="pipe-phase">Stage</span>
+      <span class="pipe-desc">LLM generates a code patch. Anchor validation confirms the patch targets actual file content, not hallucinated code.</span>
+    </div>
+    <div class="pipe-step">
+      <span class="pipe-phase">Boot</span>
+      <span class="pipe-desc">Staging instance starts on an alternate port. Health endpoint confirms the service is alive and functional.</span>
+    </div>
+    <div class="pipe-step">
+      <span class="pipe-phase">Approve</span>
+      <span class="pipe-desc">Human approval gate. The Watchtower presents the diff. Nothing deploys without operator consent.</span>
+    </div>
+    <div class="pipe-step">
+      <span class="pipe-phase">Swap</span>
+      <span class="pipe-desc">Gateway routes flip to staging. Production archived for rollback. 60-second watchdog monitors for failures.</span>
+    </div>
+    <div class="pipe-step">
+      <span class="pipe-phase">Guard</span>
+      <span class="pipe-desc">Three consecutive failures trigger automatic rollback. The system heals itself. No human intervention required.</span>
+    </div>
+  </div>
+</section>
+
+<div class="divider"></div>
+
+<section class="ethos">
+  <blockquote>RouxYou exists because the operator believed that an AI system that manages your life should not report to someone else's server.</blockquote>
+  <span class="attr">— Architecture Manifesto, Feb 2026</span>
+</section>
+
+<footer>
+  <span class="footer-left">© 2026 Dr. Helix — rouxyou.com</span>
+  <div class="footer-right">
+    <a href="https://github.com/RouxYouAI">GitHub</a>
+  </div>
+</footer>
+
 </div>
 </body>
 </html>
