Update footer to include Claude's name

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ h1 { animation-delay: 0.25s; }
 </section>
 
 <footer>
-  <span class="footer-left">© 2026 Dr. Helix — rouxyou.com</span>
+  <span class="footer-left">© 2026 Dr. Helix & Claude — rouxyou.com</span>
   <div class="footer-right">
     <a href="https://github.com/RouxYouAI">GitHub</a>
   </div>
